# tssynth

./: .gitignore  LICENSE  README.md  pyproject.toml  tssynth_conda.yml
data/: model_list.txt  nlte_info.yml
data/linelists/: 12C13C_GESv5.bsyn  12C15N_GESv5.bsyn  12CH_GESv5.bsyn  13C13C_GESv5.bsyn  13CH_GESv5.bsyn  14NH_GESv5.bsyn  vald-3700-3800-for-grid-nlte-04sep2023  vald-9200-9300-for-grid-nlte-04sep2023  vald-9300-9800-for-grid-nlte-04sep2023
fortran/: Makefile  README
src/tssynth/: __init__.py  downloader.py  marcs.py  solar_abundances.py  solar_isotopes.py  synthesizer.py  utils.py
tests/: p4000_g+4.5_m0.0_t01_st_z+0.00_a+0.00_c+0.00_n+0.00_o+0.00_r+0.00_s+0.00.mod  p7750_g+4.5_m0.0_t02_st_z-0.25_a+0.10_c+0.00_n+0.00_o+0.10_r+0.00_s+0.00.mod  s5000_g+2.0_m1.0_t02_st_z-2.00_a+0.40_c+0.00_n+0.00_o+0.40_r+0.00_s+0.00.mod  s8000_g+2.0_m1.0_t02_st_z-3.00_a+0.40_c+0.00_n+0.00_o+0.40_r+0.00_s+0.00.mod  test_download.py  test_marcs.py  test_quick.py  test_utils.py
tests/model_atmospheres/: p3300_g+4.5_m0.0_t01_st_z-4.00_a+0.40_c+0.00_n+0.00_o+0.40_r+0.00_s+0.00.mod  s2500_g+0.5_m1.0_t02_st_z-2.50_a+0.40_c+0.00_n+0.00_o+0.40_r+0.00_s+0.00.mod  s2500_g+0.5_m1.0_t05_st_z-2.50_a+0.40_c+0.00_n+0.00_o+0.40_r+0.00_s+0.00.mod  s5750_g+1.5_m1.0_t05_st_z-0.75_a+0.30_c+0.00_n+0.00_o+0.30_r+0.00_s+0.00.mod  s6750_g+3.0_m1.0_t02_st_z+0.00_a+0.00_c+0.00_n+0.00_o+0.00_r+0.00_s+0.00.mod  s7000_g+3.0_m1.0_t02_st_z+0.00_a+0.00_c+0.00_n+0.00_o+0.00_r+0.00_s+0.00.mod  s7500_g+3.5_m1.0_t05_st_z-5.00_a+0.40_c+0.00_n+0.00_o+0.40_r+0.00_s+0.00.mod
