[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tssynth"
version = "0.0.1"
authors = [
  { name="Alex Ji", email="alexji@uchicago.edu" },
]
description = "Wrapper for turbospectrum"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
license = {file="LICENSE"}

[project.urls]
Homepage = "https://github.com/alexji/tssynth"
Issues = "https://github.com/alexji/tssynth/issues"
